# MinearchyBot

./: .gitignore  .replit  .taplo.toml  LICENSE  README.md  bot.py  config.example.json  flake.nix  install  lint  lint.sh  pyproject.toml  requirements.txt  start  start.sh  webserver.py
.github/workflows/: bandit.yml  lint.yml  pyright.yml
.github/workflows/scripts/: lint.py
cogs/: error_handler.py  mc_server.py  misc.py  moderation.py  suggestions.py
minearchy_bot/: __init__.py  __main__.py  config.example.json
minearchy_bot/cogs/: error_handler.py  minecraft_server.py  misc.py  miscellanious.py  moderation.py  utils.py
minearchy_bot/core/: __init__.py  minearchy_bot.py
minearchy_bot/minecraft_server/: __init__.py  geyser_server.py
minearchy_bot/utils/: override.py
