[tool.poetry]
name = "minearchy-bot"
version = "1.0.0"
description = "A simple Discord bot for the Lands of Minearchy Discord server."
authors = ["RGBCube", "The Lands of Minearchy team"]

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = { version = "*", extras = ["speed"] }
jishaku = "*"
mcstatus = "*"
uvloop = "*"

[tool.poetry.scripts]
bot = "minearchy_bot.__main__:main"
